// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders basic progress bar 1`] = `
<blaze-progress
  class="hydrated"
  percentage="5"
>
  
  
  <div
    class="c-progress"
  >
    
    5%
  </div>
</blaze-progress>
`;

exports[`Progress renders rounded ends correctly 1`] = `
<blaze-progress
  class="hydrated"
  percentage="25"
  rounded=""
  size="large"
  type="success"
>
  
  
  <div
    class="c-progress c-progress--rounded u-large"
  >
    
    25%
  </div>
</blaze-progress>
`;

exports[`Progress renders size correctly 1`] = `
<blaze-progress
  class="hydrated"
  percentage="15"
  size="small"
>
  
  
  <div
    class="c-progress u-small"
  >
    
    15%
  </div>
</blaze-progress>
`;

exports[`Progress renders type correctly 1`] = `
<blaze-progress
  class="hydrated"
  percentage="20"
  size="medium"
  type="info"
>
  
  
  <div
    class="c-progress u-medium"
  >
    
    20%
  </div>
</blaze-progress>
`;
